[b]2.9.7[/b]
- Added: Choosing final event now leads directly to on-demand streams
- Added: Added refresh option at the top of live events when the list is large
- Changed: Live events now show at the top
- Changed: Flash events now specify HD or SD when stream URL indicates
- Fixed: Eliminated defunct progressive streams
- Fixed: Fixed bug that prevented condensed game building

[b]2.9.6[/b]
- Changed: Eliminate redundant iStream when duplicates HD or SD stream
- Added: Refresh added at the top when several live events displayed
- Fixed: Standardized plugin directory name

[b]2.9.5[/b]
- Added: Custom date search to on-demand section
- Added: All teams option added under by team category
- Added: OnDemand team filter includes similar events, i.e. NHL includes NHL preseason
- Added: Progressive stream support added - expert setting in beta
- Changed: View Mode includes thumbnail and extends to all directories
- Fixed: Removed league filter within on-demand byteam event filter where it didn't make sense

[b]2.9.4[/b]
- Fixed: Eliminate condensed games that duplicate highlights (which seems to be all the time)
- Fixed: Fixed logic to correct highlight building

[b]2.9.3[/b]
- Added: Favorite team is bolded - defined on website
- Fixed: Tweaks added to correctly determine status of live games

[b]2.9.2[/b]
- Added: Highlights supported - display setting included
- Added: Condensed Games supported - display setting included
- Added: Initial on-demand screen shows recent events - display setting included
- Added: Setting added to set view mode for event and stream screens
- Changed: Title dates now include year

[b]2.9.1[/b]
- Added: Australia location added.
- Added: Added date to on-demand stream titles
- Fixed: Live and on-demand special event titles supported

[b]2.9.0[/b]
- Added: Restructured live events and streams to improve performance
- Added: Restructured on-demand events and streams to improve performance